--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.14.1",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.13.2",
+    "prisma": "^6.6.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "winston": "^3.17.0"
   }
 }
